--- a/index.html
+++ b/index.html
@@ -3,57 +3,22 @@
 <head>
   <title>Page Title</title>
   <meta charset="UTF-8"/>
+  <script src="script.js" async></script>
 </head>
 <body>
-  <script>
-    //gg
-    function computerPlay() {
-      let move = Math.random()*3;
-      if (move < 1) {
-        return "rock"
-      }
-      else if (move > 1 && move < 2) {
-        return "paper"
-      }
-      else {
-        return "scissors"
-      }
-    }
-    function RPSround(cpumove, playermove) {
-      if (cpumove == playermove) {
-        console.log("It's a tie! You Played : " + playermove + " and the CPU Played: " + cpumove)
-        return 0
-      }
-      else if (cpumove == "rock" && playermove == "scissors" || cpumove == "paper" && playermove == "rock" || cpumove == "scissors" && playermove == "paper") {
-        console.log("You Lose! You Played : " + playermove + " and the CPU Played: " + cpumove)
-        return -1
-      }
-      else {
-        console.log("You win! You Played : " + playermove + " and the CPU Played: " + cpumove)
-        return 1
-      }
-    }
-    function game() {
-      let score = 0;
-      for (let i = 0; i < 5; i++) {
-        let cpumove = computerPlay();
-        var playermove = "";
-        while (playermove != "rock" && playermove != "paper" && playermove != "scissors") {
-          playermove = prompt("enter either rock, paper, or scissors").toLowerCase();
-        }
-        score += RPSround(cpumove, playermove)
-      }
-      if (score > 0) {
-        console.log("You Win!")
-      }
-      else if (score < 0) {
-        console.log("You Lose")
-      }
-      else {
-        console.log("You Tie!")
-      }
-      return ""
-    }
-  </script>
+  <div id="score-container">
+    <h1>My Score:</h1>
+    <h1 id="my-score"></h1>
+    <h1>CPU Score:</h1>
+    <h1 id="cpu-score"></h1>
+  </div>
+  <div id="rps-container">
+    <button class="game-button">Rock</button>
+    <button class="game-button">Paper</button>
+    <button class="game-button">Scissors</button>
+  </div>
+  <div id="message-container">
+    <h2 id="message"></h2>
+  </div>
 </body>
 </html>
